--- a/practica3/index.html
+++ b/practica3/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 3</title>
-    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div class="bg-1">
-        <h1>Practica 3</h1>
+    <div class="container">
+        <div class="container"></div>
+        <div class="bg-1">
+            <h1>Practica 3</h1>
+        </div>
+
+        <p id="contenedorNumeros"></p>
+        <p id="contenedorNumeros2"></p>
+
+        <h2>Elementos del Array</h2>
+        <div id="miArray5"></div>
     </div>
     <script src="js/index.js"></script>
 </body>
