--- a/practica4/index.html
+++ b/practica4/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 4</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
     <div>
         <canvas id="fibonacciChart" width="200" height="200"></canvas>
     </div>
-    <script src="js/index.js"></script>
     <script>
         const ctx = document.getElementById('fibonacciChart').getContext('2d');
         
         new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['0', '1', '1', '2', '3', '5', '8', '13', '21', '34', '55', '89', '144', '233', '377'],
+                labels:primeros10,
                 datasets: [{
-                    label: 'Fibonacci Numbers',
-                    data: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377],
+                    label: primeros10,
+                    data: primeros10,
                     backgroundColor: [
                         'rgba(75, 192, 192, 0.2)',
                         'rgba(153, 102, 255, 0.2)',
