--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica5" class="btn-22"><span>Practica 5</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3"></div>
+                <a href="practica6" class="btn-22"><span>Practica 6</span></a>
+            </div>
         </div>
     </div>
 
