--- a/practica6/index.html
+++ b/practica6/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 6</title>
+    <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
-    
+    <div>
+        <h1>Practica 6</h1>
+    </div>
+
     <script src = "js/index.js"></script>
 </body>
 </html>
