--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica6" class="btn-22"><span>Practica 6</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="Practica7" class="btn-22"><span>Practica 7</span></a>
+            </div>
         </div>
     </div>
 
