--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="Practica7" class="btn-22"><span>Practica 7</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica8" class="btn-22"><span>Practica 8</span></a>
+            </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica9" class="btn-22"><span>Practica 9</span></a>
+            </div>
         </div>
     </div>
 
