--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica9" class="btn-22"><span>Practica 9</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica10" class="btn-22"><span>Practica 10</span></a>
+            </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica11" class="btn-22"><span>Practica 11</span></a>
+            </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica12" class="btn-22"><span>Practica 12</span></a>
+            </div>
         </div>
     </div>
 
