--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica12" class="btn-22"><span>Practica 12</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica13" class="btn-22"><span>Practica 13</span></a>
+            </div>
         </div>
     </div>
 
