practica 14 en index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="practica13" class="btn-22"><span>Practica 13</span></a>
             </div>
             <div class="col-12 col-md-3 text-center p-3">
-                <a href="http://localhost:3000/" class="btn-22"><span>Practica 14</span></a>
+                <a href="practica14" class="btn-22"><span>Practica 14</span></a>
             </div>
         </div>
     </div>
