--- a/practica14/index.html
+++ b/practica14/index.html
@@ -12,9 +12,20 @@
             font-size: 1.5rem;
             margin-right: 10px;
         }
+
+        body {
+            background-color: #f8f9fa; /* Fondo claro */
+        }
+
+        h1 {
+            color: #d400ff; /* Color azul */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra de texto */
+            margin-top: 20vh; /* Centrar verticalmente */
+        }
     </style>
 </head>
 <body>
+    <h1>Ver http://localhost:3000/</h1>
     <div class="container mt-5">
         <h1 class="text-center">Lista de Archivos y Carpetas</h1>
         <ul id="fileList" class="list-group mt-4"></ul>
