--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica17/views/index.html" class="btn-22"><span>Practica 17</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica18" class="btn-22"><span>Practica 18</span></a>
+            </div>
         </div>
     </div>
 
