--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             <div class="col-12 col-md-3 text-center p-3">
                 <a href="practica18" class="btn-22"><span>Practica 18</span></a>
             </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica19" class="btn-22"><span>Practica 19</span></a>
+            </div>
+            <div class="col-12 col-md-3 text-center p-3">
+                <a href="practica20" class="btn-22"><span>Practica 20</span></a>
+            </div>
         </div>
     </div>
 
